Refactor and enhance user management
- Move employee.js into app.js
- Add toggleUserEditModal(user) function in app.js
- Update and secure employee.js based on user access rights
- Add RH Department Head instance in DataInitializer
- Move UserServlet access control to RolePermissions
- Develop RolePermissions logic
- Add DAO method to find Department Head by ID and update generateMatricule